--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>Dagskrávefur Menningarnætur 2022</h1>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
