--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="./scripts/main.js"></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Dagskrávefur Menningarnætur 2022</h1>
-    <script type="module" src="./scripts/main.js"></script>
-</body>
+  </head>
+  <body>
+    <div id="output"></div>
+    <button type="button" class="btn btn-primary" id="button2">JSON Data</button>
+    <div id="myData"></div>
+
+    <script src="scripts/main.js"></script>
+  </body>
 </html>
