--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <div id="myData"></div>
 
     <script src="scripts/main.js"></script>
+    <a href = "map.html">Yfir á næstu síðu</a>
+
   </body>
 </html>
